--- a/space-tourism/public/index.html
+++ b/space-tourism/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> <!-- TODO: Change favicon -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- TODO: Change favicon -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- TODO: Change Meta Content -->
@@ -11,9 +12,12 @@
       content="Web site created using create-react-app"
     />
     <!-- ---------------------------- Google Fonts ----------------------------- -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap"
+      rel="stylesheet"
+    />
     <!-- ---------------------------- Google Fonts ----------------------------- -->
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
